Dropped support for per_page pagination
