# swagger/v1/swagger.json
@@ -205,12 +205,6 @@
                 "meta": {
                   "type": "object",
                   "properties": {
-                    "page": {
-                      "type": "integer"
-                    },
-                    "per_page": {
-                      "type": "integer"
-                    },
                     "total": {
                       "type": "integer"
                     },
@@ -283,8 +277,6 @@
                   }
                 ],
                 "meta": {
-                  "page": 1,
-                  "per_page": 10,
                   "total": 1,
                   "limit": null,
                   "offset": null
@@ -483,7 +475,7 @@
         }
       }
     },
-    "/api/hooks/endpoints": {
+    "/api/webhooks/endpoints": {
       "get": {
         "summary": "List all endpoints",
         "tags": [
@@ -502,18 +494,6 @@
             "name": "X-RH-IDENTITY",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "page",
-            "in": "query",
-            "type": "integer",
-            "required": false
-          },
-          {
-            "name": "per_page",
-            "in": "query",
-            "type": "integer",
-            "required": false
           },
           {
             "name": "order",
@@ -585,12 +565,6 @@
                 "meta": {
                   "type": "object",
                   "properties": {
-                    "page": {
-                      "type": "integer"
-                    },
-                    "per_page": {
-                      "type": "integer"
-                    },
                     "total": {
                       "type": "integer"
                     },
@@ -621,8 +595,6 @@
                   }
                 ],
                 "meta": {
-                  "page": 1,
-                  "per_page": 10,
                   "total": 2,
                   "limit": null,
                   "offset": null
@@ -1003,6 +975,18 @@
             "in": "path",
             "type": "integer",
             "required": true
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "integer",
+            "required": false
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "type": "integer",
+            "required": false
           }
         ],
         "responses": {
@@ -1012,25 +996,207 @@
               "type": "object",
               "properties": {
                 "data": {
-                  "type": "object",
-                  "properties": {
-                    "id": {
-                      "type": "string",
-                      "example": "1"
-                    },
-                    "type": {
-                      "type": "string",
-                      "example": "filter"
-                    },
-                    "attributes": {
-                      "type": "object",
-                      "properties": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "attributes": {
                         "enabled": {
                           "type": "boolean"
                         }
+                      },
+                      "relationships": {
+                        "type": "object",
+                        "properties": {
+                          "apps": {
+                            "type": "object",
+                            "properties": {
+                              "data": {
+                                "type": "array",
+                                "items": {
+                                  "type": "object",
+                                  "properties": {
+                                    "id": {
+                                      "type": "string"
+                                    },
+                                    "type": {
+                                      "type": "string"
+                                    }
+                                  }
+                                }
+                              }
+                            }
+                          },
+                          "event_types": {
+                            "type": "object",
+                            "properties": {
+                              "data": {
+                                "type": "array",
+                                "items": {
+                                  "type": "object",
+                                  "properties": {
+                                    "id": {
+                                      "type": "string"
+                                    },
+                                    "type": {
+                                      "type": "string"
+                                    }
+                                  }
+                                }
+                              }
+                            }
+                          },
+                          "levels": {
+                            "type": "object",
+                            "properties": {
+                              "data": {
+                                "type": "array",
+                                "items": {
+                                  "type": "object",
+                                  "properties": {
+                                    "id": {
+                                      "type": "string"
+                                    },
+                                    "type": {
+                                      "type": "string"
+                                    }
+                                  }
+                                }
+                              }
+                            }
+                          }
+                        }
+                      },
+                      "type": {
+                        "type": "string"
+                      },
+                      "id": {
+                        "type": "string"
                       }
+                    }
+                  }
+                },
+                "meta": {
+                  "type": "object",
+                  "properties": {
+                    "total": {
+                      "type": "integer"
+                    }
+                  }
+                }
+              }
+            },
+            "examples": {
+              "application/json": {
+                "data": [
+                  {
+                    "type": "filter",
+                    "id": "1",
+                    "attributes": {
+                      "enabled": true
                     },
                     "relationships": {
+                      "apps": {
+                        "data": [
+                          {
+                            "id": "1",
+                            "type": "app"
+                          }
+                        ]
+                      },
+                      "event_types": {
+                        "data": [
+                          {
+                            "id": "1",
+                            "type": "event_type"
+                          },
+                          {
+                            "id": 2,
+                            "type": "event_type"
+                          }
+                        ]
+                      },
+                      "levels": {
+                        "data": [
+                          {
+                            "id": "1",
+                            "type": "level"
+                          },
+                          {
+                            "id": 2,
+                            "type": "level"
+                          }
+                        ]
+                      }
+                    }
+                  }
+                ],
+                "meta": {
+                  "total": 3,
+                  "limit": null,
+                  "offset": null
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a filter",
+        "tags": [
+          "filter"
+        ],
+        "description": "Creates a filter",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "operationId": "CreateFilter",
+        "parameters": [
+          {
+            "name": "X-RH-IDENTITY",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "filter",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "app_ids": {
+                  "type": "array",
+                  "items": "integer"
+                },
+                "event_type_ids": {
+                  "type": "array",
+                  "items": "integer"
+                },
+                "level_ids": {
+                  "type": "array",
+                  "items": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "creates a filter",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "attributes": {
+                    "enabled": {
+                      "type": "boolean"
+                    }
+                  },
+                  "relationships": {
+                    "type": "object",
+                    "properties": {
                       "apps": {
                         "type": "object",
                         "properties": {
@@ -1091,19 +1257,51 @@
                           }
                         }
                       },
-                      "endpoint": {
+                      "event_types": {
                         "type": "object",
                         "properties": {
-                          "id": {
-                            "type": "string",
-                            "example": "1"
-                          },
-                          "type": {
-                            "type": "string"
+                          "data": {
+                            "type": "array",
+                            "items": {
+                              "type": "object",
+                              "properties": {
+                                "id": {
+                                  "type": "string"
+                                },
+                                "type": {
+                                  "type": "string"
+                                }
+                              }
+                            }
+                          }
+                        }
+                      },
+                      "levels": {
+                        "type": "object",
+                        "properties": {
+                          "data": {
+                            "type": "array",
+                            "items": {
+                              "type": "object",
+                              "properties": {
+                                "id": {
+                                  "type": "string"
+                                },
+                                "type": {
+                                  "type": "string"
+                                }
+                              }
+                            }
                           }
                         }
                       }
                     }
+                  },
+                  "type": {
+                    "type": "string"
+                  },
+                  "id": {
+                    "type": "string"
                   }
                 }
               }
